2011-10-31  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add PointsToolbox/polardecomp.m (v0.2.0):

	- Swap output arguments so that they follow the natural order of
	the equation.

2011-10-30  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* PointsToolbox/dmatrix2coords.m (v0.1.1):

	- Fix bug. Because the resulting vectors from the distance matrix
	can be a rigid transformation of the vectors that created the
	distance matrix in the first place, we can obtain something like
	this from 4 vectors in R^2

	    0.0000   -0.0000    0.4356   -0.1337
            0.0000   -0.0000   -0.1971   -0.4033
            0.0000   -0.0000   -0.0415    0.5437
           -0.0000   -0.0000   -0.1970   -0.0067

	If we now truncate to leave only the two first columns, we are
	throwing away most of the information in the result, and leaving
	only numerical errors. Now, we first sort the columns from largest
	norm to smallest norm, i.e.

           -0.1337    0.4356   -0.0000    0.0000
           -0.4033   -0.1971   -0.0000    0.0000
            0.5437   -0.0415   -0.0000    0.0000
           -0.0067   -0.1970   -0.0000   -0.0000

	before truncating.

	* Add PointsToolbox/gram2dsq.m (v0.1.0):

	- GRAM2DSQ Convert Gram matrix to squared distance matrix.

	* FiltersToolbox/skeleton_label.m (v0.15.1):

	- Fix bug. Take into account that some branches may not have
	voxels associated to them.

	* Add PointsToolbox/polardecomp.m (v0.1.0):

	- POLARDECOMP Polar decomposition of a square complex matrix.

2011-10-16  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* FiltersToolbox/skeleton_label.m (v0.15.1):

	- Fix bug. We cannot assume that there are no short leaf
	branches. This function can be called by the pruning
	function. Instead, we now compute the connection matrix, and use
	it to find which branches are leaf-branches. Then, we can convert
	short branches that are also *not* leaves into bifurcation clumps.

	- Convert intermdiate branches with up to 4 voxels to bifurcation